<resources>
    <string name="app_name">Cycling Computer</string>
    <string name="settings">Settings</string>
    <string name="log">Log</string>
    <string name="rotate">Rotate</string>
    <string name="ant_status">ANT+ Status</string>
    <string name="gps_status">GPS Status</string>
    <string name="zero_power">Zero Power Meter</string>
    <string name="record_activity_attribution_label">RecordActivity</string>
    <string name="record_activity_service_attribution_label">RecordActivityService</string>

    <string name="main_menu">Main Menu</string>
    <string name="record">Record</string>
    <string name="strava_auth">Strava Authentication</string>
    <string name="data_field_settings">Data Fields</string>
    <string name="strava_login">Strava Login</string>
    <string name="ant_search">Sensor Manager</string>
    <!-- PREFERENCES -->
    <string name="app_settings">App Settings</string>
    <string name="athelete_settings">Athlete Settings</string>
    <string name="bike_settings">Bike Settings</string>
    <string name="connect">Connect</string>
    <string name="strava">Strava</string>
    <string name="debug">Debug</string>
    <string name="metric">Metric Units</string>
    <string name="invert_colors">Invert Colors</string>
    <string name="invert_colors_desc">Black text on white background.</string>
    <string name="wheel">Wheel Circumfrence(mm)</string>
    <string name="grade_offset">Mount Angle Offset(deg)</string>
    <string name="calibrate_mount">Calibrate Mount</string>
    <string name="calibrate_mount_q">Calibrate mount?</string>
    <string name="keep_awake">Keep Screen On</string>
    <string name="keep_awake_desc">Keep screen on during activity.</string>
    <string name="hr_max">HR Max(bpm)</string>
    <string name="ftp">FTP(w)</string>
    <string name="hr_zone_color">Use HR Zone Colors</string>
    <string name="power_zone_color">Use Power Zone Colors</string>

    <string name="ride">Ride</string>
    <string name="run">Run</string>
    <string name="walk">Walk</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="replace">Replace</string>
    <string name="forget">Forget</string>
    <string name="discard">Discard</string>
    <string name="saved">Saved</string>
    
    <string name="line_feed">\u000a</string>
    <string name="elipsis">\u2026</string>

    <string name="save_alert">Save activity?</string>
    <string name="exit_alert">Closing app\u2026\u000aContinue activity later?</string>

    <string name="direction_arrow">Direction Arrow</string>
    <string name="wind_arrow">Wind Arrow</string>
    <string name="gps_icon">GPS Icon</string>
    <string name="ant_icon">ANT Icon</string>
    <string name="activity_description">Activity Description</string>
    <string name="activity_name">Activity Name</string>
    <string name="start">Start/Pause</string>
    <string name="lap">Lap</string>
    <string name="end">End</string>

    <string name="degree_symbol">\u00b0</string>

    <string name="app_permissions">Permissions</string>
    <string name="permission_name_location">Location:</string>
    <string name="permission_name_write">Storage:</string>
    <string name="permission_location">Device location is required for activity location and speed.</string>
    <string name="permission_write">Write access is required to save activities to device.</string>

    <string name="device_search">Device Search</string>
    <string name="device_list">Device List</string>
    <string name="device">Device</string>
    <string name="device_id">Device Id: </string>
    <string name="forget_sensor">Long click to forget device.</string>
    <string name="back">Back</string>

    <!-- UNITS -->
    <string name="f">f</string>
    <string name="c">c</string>
    <string name="degF">\u00b0F</string>
    <string name="degC">\u00b0C</string>
    <string name="m">m</string>
    <string name="k">k</string>
    <string name="h">h</string>
    <string name="mi">mi</string>
    <string name="km">km</string>
    <string name="hr">hr</string>
    <string name="ft">ft</string>
    <string name="mt">mt</string>
    <string name="rpm">rpm</string>
    <string name="r">r</string>
    <string name="bpm">bpm</string>
    <string name="b">b</string>
    <string name="w">w</string>
    <string name="min">min</string>
    <string name="percent">%</string>

    <string name="speed">Speed</string>
    <string name="speed_avg">Speed Avg</string>
    <string name="speed_lap">Speed Lap</string>
    <string name="pace">Pace</string>
    <string name="pace_avg">Pace Avg</string>
    <string name="pace_lap">Pace Lap</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="heart_rate_avg">Heart Rate Avg</string>
    <string name="heart_rate_lap">Heart Rate Lap</string>
    <string name="HR">HR</string>
    <string name="HR_avg">HR Avg</string>
    <string name="HR_lap">HR Lap</string>
    <string name="cadence">Cadence</string>
    <string name="cadence_avg">Cadence Avg</string>
    <string name="cadence_lap">Cadence Lap</string>
    <string name="cad_avg">Cad Avg</string>
    <string name="cad_lap">Cad Lap</string>

    <string name="power">Power</string>
    <string name="power_3s">Power 3s</string>
    <string name="power_10s">Power 10s</string>
    <string name="power_30s">Power 30s</string>
    <string name="power_5m">Power 5m</string>
    <string name="power_20m">Power 20m</string>
    <string name="power_avg">Power Avg</string>
    <string name="power_lap">Power Lap</string>
    <string name="torque">Torque</string>
    <string name="torque_effectiveness">Torque Effectiveness</string>
    <string name="balance">Balance</string>
    <string name="smoothness">Smoothness</string>
    <string name="pedal_smoothness">Pedal Smoothness</string>

    <string name="time">Time</string>
    <string name="time_lap">Time Lap</string>
    <string name="time_moving">Time Moving</string>
    <string name="time_moving_lap">Time Moving Lap</string>
    <string name="distance">Distance</string>
    <string name="distance_lap">Distance Lap</string>
    <string name="ascent">Ascent</string>
    <string name="descent">Descent</string>
    <string name="ascent_lap">Ascent Lap</string>
    <string name="descent_lap">Descent Lap</string>
    <string name="grade">Grade</string>
    <string name="grade_alt">Grade (Alt)</string>
    <string name="altitude">Altitude</string>
    <string name="watts_per_kg">Watts/KG</string>

    <string name="data_fields">Data Fields</string>
    <string name="none">None</string>
    <string name="empty">Empty</string>
    <string name="general">General</string>
    <string name="speed_pace">Speed/Pace</string>
    <string name="bearing">Bearing</string>
    <string name="temperature">Temperature</string>
    <string name="temp">Temp</string>
    <string name="wind">Wind</string>
    <string name="test">Test</string>
    <string name="gps_accuracy">GPS Accuracy</string>
    <string name="time_of_day">Time of Day</string>
    <string name="gear_ratio">Gear Ratio</string>
    <string name="angle">Angle</string>

    <string name="trainer">Trainer</string>
    <string name="commute">Commute</string>
    <string name="private_s">Private</string>

    <string name="found_devices">Discovered Devices</string>
    <string name="saved_devices">Saved Devices</string>
    <string name="ok">OK</string>
</resources>
