<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/zero_power_menu"
        android:title="@string/zero_power"
        android:icon="@drawable/ic_toolbar_power"
        android:visible="false"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/zero_power_item"
                android:title="@string/zero_power"/>
        </menu>
    </item>
    <item
        android:id="@+id/d_menu_item"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/main_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/record_item"
                android:title="@string/record"
                android:icon="@drawable/ic_gps_fixed_black_24dp"/>
            <item
                android:id="@+id/settings_item"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_black_24dp"/>
            <item
                android:id="@+id/rotate_item"
                android:title="@string/rotate"
                android:icon="@drawable/ic_screen_rotation_black_24dp"/>
            <item
                android:id="@+id/log_item"
                android:title="@string/log"
                android:icon="@drawable/ic_library_books_black_24dp"/>
            <item
                android:id="@+id/bluetooth_item"
                android:title="bluetooth"/>
            <item
                android:id="@+id/bluetooth_search"
                android:title="BLE Search"/>
            <item
                android:id="@+id/hrv"
                android:title="HRV"/>
        </menu>
    </item>
</menu>