<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ant_search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ant_search_header">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/ant_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ant_search"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageButton
            android:id="@+id/ant_search_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_search_black_24dp"
            android:scaleType="center"
            app:tint="@color/white"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/ant_search"
            android:backgroundTint="@android:color/transparent"/>
        <ProgressBar
            android:id="@+id/ant_search_progress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminateTint="@color/white"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/ant_search_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/rectangle_outline_05dp"
        app:layout_constraintTop_toBottomOf="@id/ant_search_toolbar"
        app:layout_constraintBottom_toTopOf="@id/ant_device_list">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:contentDescription="@string/ant_icon"
            android:src="@drawable/ic_antplus_icon"
            app:tint="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/device_list"
            android:textAppearance="@android:style/TextAppearance.Medium"/>
    </LinearLayout>
    <ListView
        android:id="@+id/ant_device_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ant_search_header"
        app:layout_constraintBottom_toBottomOf="parent">
    </ListView>
</androidx.constraintlayout.widget.ConstraintLayout>